Fix Debian packaging warnings for the 1.43.6 release
Added a missing ${misc:Depends} to a new package, and removed an
extraneous configure option (--enable-quota was removed as of
e2fsprogs 1.43.)

Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/debian/control.in
+++ b/debian/control.in
@@ -36,7 +36,7 @@ Description: statically-linked version of the ext2/ext3/ext4 filesystem checker
 
 Package: e2fsprogs-l10n
 Priority: extra
-Depends: e2fsprogs (= ${binary:Version})
+Depends: e2fsprogs (= ${binary:Version}), ${misc:Depends}
 Replaces: e2fsprogs (<< 1.43.5-1)
 Architecture: any
 Description: ext2/ext3/ext4 file system utilities - translations
