--- a/debian/control.in
+++ b/debian/control.in
@@ -19,7 +19,7 @@ ifdef(`E2FSCK_STATIC',``
 Package: e2fsck-static
 Priority: optional
 Depends: ${misc:Depends}
-Recommends: sash | bash-static | zsh-static | busybox-static | zsh30-static
+Recommends: sash | bash-static | zsh-static | busybox-static
 Architecture: any
 Description: statically-linked version of the ext2/ext3/ext4 filesystem checker
  This may be of some help to you if your filesystem gets corrupted enough
