--- a/debian/control.in
+++ b/debian/control.in
@@ -33,7 +33,7 @@ Description: statically-linked version of the ext2/ext3/ext4 filesystem checker
 '')dnl
 
 Package: e2fsprogs-l10n
-Priority: extra
+Priority: optional
 Depends: e2fsprogs (= ${binary:Version}), ${misc:Depends}
 Replaces: e2fsprogs (<< 1.43.5-1)
 Architecture: all
@@ -60,7 +60,7 @@ Description: common error description library
 
 Package: comerr-dev
 Section: libdevel
-Priority: extra
+Priority: optional
 Depends: libc6-dev | libc-dev, libcomerr2 (= ${mainBinary}), ${misc:Depends}
 Suggests: doc-base
 Replaces: e2fslibs-dev (<< 1.33-2), libkrb5-dev (<< 1.3)
@@ -88,7 +88,7 @@ Description: command-line interface parsing library
 
 Package: ss-dev
 Section: libdevel
-Priority: extra
+Priority: optional
 Depends: libc6-dev | libc-dev, libss2 (= ${mainBinary}), comerr-dev, ${misc:Depends}
 Architecture: any
 Description: command-line interface parsing library - headers and static libraries
@@ -135,7 +135,7 @@ Description: ext2/ext3/ext4 file system libraries
 
 Package: e2fslibs-dev
 Section: libdevel
-Priority: extra
+Priority: optional
 Depends: libc6-dev | libc-dev, comerr-dev, e2fslibs (= ${binary:Version}), ${misc:Depends}
 Suggests: doc-base
 Provides: ext2fs-dev, e2p-dev
