tests: log tests that are taking a long time
Create a .slow file for tests that take too long to run, so it is
possible to find them easily after all of the tests have run.

Signed-off-by: Andreas Dilger <adilger@dilger.ca>
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -93,7 +93,8 @@ testend: test_one ${TDIR}/image
 	@echo "If all is well, edit ${TDIR}/name and rename ${TDIR}."
 
 clean::
-	$(RM) -f *~ *.log *.new *.failed *.ok *.tmp test_one test_script mke2fs.conf
+	$(RM) -f *~ *.log *.new *.failed *.ok *.tmp *.slow
+	$(RM) -f test_one test_script mke2fs.conf
 
 distclean:: clean
 	$(RM) -f Makefile
