--- a/tests/test_one.in
+++ b/tests/test_one.in
@@ -22,7 +22,7 @@ case "$1" in
 esac
 
 case "$1" in
-    *.failed|*.new|*.ok|*.log|*.tmp)	exit 0 ;;
+    *.failed|*.new|*.ok|*.log|*.tmp|*.slow)	exit 0 ;;
 esac
 
 test_dir=$1
@@ -77,7 +77,8 @@ else
 fi
 elapsed=$((SECONDS - start))
 if [ $elapsed -gt 60 -a ! -f $test_dir/is_slow_test ]; then
-	echo "$test_name:  *** took $elapsed seconds to finish ***"
+	echo "$test_name:  *** took $elapsed seconds to finish ***" |
+		tee $test_name.slow
 	echo "$test_name:  consider adding $test_dir/is_slow_test"
 fi
 
