Update release notes, etc., for the 1.43.7 release
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/debian/control.in
+++ b/debian/control.in
@@ -33,6 +33,7 @@ Description: statically-linked version of the ext2/ext3/ext4 filesystem checker
 '')dnl
 
 Package: e2fsprogs-l10n
+Section: localization
 Priority: optional
 Depends: e2fsprogs (= ${binary:Version}), ${misc:Depends}
 Replaces: e2fsprogs (<< 1.43.5-1)
