--- a/debian/control.in
+++ b/debian/control.in
@@ -38,6 +38,7 @@ Priority: optional
 Depends: e2fsprogs (>= ${binary:Version}), e2fsprogs (<< ${binary:Version}+c~), ${misc:Depends}
 Replaces: e2fsprogs (<< 1.43.5-1)
 Architecture: all
+Multi-Arch: foreign
 Description: ext2/ext3/ext4 file system utilities - translations
  The ext2, ext3 and ext4 file systems are successors of the original ext
  ("extended") file system. They are the main file system types used for
@@ -66,6 +67,7 @@ Depends: libc6-dev | libc-dev, libcomerr2 (= ${mainBinary}), ${misc:Depends}
 Suggests: doc-base
 Replaces: e2fslibs-dev (<< 1.33-2), libkrb5-dev (<< 1.3)
 Architecture: any
+Multi-Arch: same
 Description: common error description library - headers and static libraries
  libcom_err is an attempt to present a common error-handling mechanism to
  manipulate the most common form of error code in a fashion that does not
@@ -92,6 +94,7 @@ Section: libdevel
 Priority: optional
 Depends: libc6-dev | libc-dev, libss2 (= ${mainBinary}), comerr-dev, ${misc:Depends}
 Architecture: any
+Multi-Arch: same
 Description: command-line interface parsing library - headers and static libraries
  This package includes a tool that parses a command table to generate
  a simple command-line interface parser, the include files needed to
