--- a/debian/control.in
+++ b/debian/control.in
@@ -109,6 +109,7 @@ Description: command-line interface parsing library - headers and static librari
 
 ifdef(`UDEB_PKGS',``
 Package: e2fsprogs-udeb
+Build-Profiles: <!noudeb>
 Package-Type: udeb
 Section: debian-installer
 Priority: optional
