--- a/debian/control.in
+++ b/debian/control.in
@@ -49,6 +49,7 @@ Description: ext2/ext3/ext4 file system utilities - translations
 
 Package: libcomerr2
 Section: libs
+Priority: optional
 Provides: libcomerr-kth-compat
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Replaces: e2fsprogs (<< 1.34-1)
@@ -77,6 +78,7 @@ Description: common error description library - headers and static libraries
 
 Package: libss2
 Section: libs
+Priority: optional
 Depends: libcomerr2, ${shlibs:Depends}, ${misc:Depends}
 Replaces: e2fsprogs (<< 1.34-1)
 Architecture: any
@@ -121,6 +123,7 @@ Description: stripped-down versions of e2fsprogs, for debian-installer
 
 Package: e2fslibs
 Section: libs
+Priority: optional
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Replaces: e2fsprogs (<< 1.34-1)
 Provides: libext2fs2, libe2p2
