--- a/debian/rules
+++ b/debian/rules
@@ -9,6 +9,10 @@
 
 -include debian/rules.custom
 
+.PHONY: binary binary-arch binary-indep build build-arch build-indep \
+	build-bf build-std install install-udeb \
+	clean checkroot mrproper debug_flags debian-files
+
 export DEB_BUILD_MAINT_OPTIONS ?= hardening=+all
 
 # be paranoid
@@ -300,20 +304,10 @@ clean:
 	rm -f debian/*.substvars
 	dh_clean
 
-install: cleanup install-std
-
-# This rule allows to factorize the dh_clean between the 2 install rules
-# This must be launched before install-* (if launching them by hand, for
-# example) or results are unpredictable
-cleanup:
+install: build
 	dh_testdir
 	dh_testroot
 	dh_prep
-
-install-std: DH_OPTIONS=
-install-std: build
-	dh_testdir
-	dh_testroot
 	dh_installdirs
 
 	mkdir -p ${tmpdir}/sbin
@@ -335,7 +329,6 @@ endif
 	dh_movefiles
 	test -z "`find ${tmpdir} -type f`"
 
-install-udeb: DH_OPTIONS=
 install-udeb: build
 	dh_testdir
 	dh_testroot
@@ -363,6 +356,7 @@ binary-indep: install
 	dh_testdir
 	dh_testroot
 	dh_lintian -i
+	dh_installdocs -i
 	dh_installchangelogs -i
 	dh_fixperms -i
 	dh_compress -i
@@ -371,15 +365,11 @@ binary-indep: install
 	dh_md5sums -i
 	dh_builddeb -i
 
-# binary-arch builds a superset of binary-indep.  This is because
-# building e2fsprogs-l10n.deb unnecessarily takes less time than
-# running the install recipe twice.  At some point when we rototill
-# the rules file we can clean this up in a better way.
 binary-arch: install $(INSTALL_UDEB)
 	dh_testdir
 	dh_testroot
 
-	dh_lintian
+	dh_lintian -a
 
   # symlinks to prepare dh_installdocs run
 
@@ -395,7 +385,7 @@ binary-arch: install $(INSTALL_UDEB)
 	mkdir -p ${debdir}/e2fslibs-dev/usr/share/doc
 	ln -sf e2fslibs ${debdir}/e2fslibs-dev/usr/share/doc/e2fslibs-dev
 
-	dh_installdocs -Ne2fsprogs-udeb
+	dh_installdocs -a -Ne2fsprogs-udeb
 
   # HTML docs
 	$(INSTALL) -d ${debdir}/e2fslibs-dev/usr/share/doc/e2fslibs/html-info/
@@ -423,8 +413,8 @@ binary-arch: install $(INSTALL_UDEB)
 	dh_installinfo -pcomerr-dev ${stdbuilddir}/lib/et/com_err.info
 	dh_installinfo -pe2fslibs-dev ${stdbuilddir}/doc/libext2fs.info
 
-	dh_installchangelogs
-	dh_fixperms
+	dh_installchangelogs -a
+	dh_fixperms -a
 	dh_strip $(call dh_strip_args,e2fsprogs)
 ifneq ($(BUILD_E2FSCK_STATIC),no)
 	dh_strip $(call dh_strip_args2,e2fsck-static,e2fsprogs)
@@ -432,7 +422,7 @@ endif
 	dh_strip $(call dh_strip_args,e2fslibs)
 	dh_strip $(call dh_strip_args,libss${SS_SOVERSION})
 	dh_strip $(call dh_strip_args,libcomerr${COMERR_SOVERSION})
-	dh_strip
+	dh_strip -a
 
 	# dpkg symbol handling
 	for i in $(SYMBOL_LIBS); \
@@ -444,12 +434,12 @@ endif
 		/bin/rm debian/$$i.tmp-patch; \
 	done
 
-	dh_compress
+	dh_compress -a
 
-	dh_makeshlibs --add-udeb=e2fsprogs-udeb
+	dh_makeshlibs -a --add-udeb=e2fsprogs-udeb
 
-	dh_installdeb
-	dh_shlibdeps -l${stdbuilddir}/lib
+	dh_installdeb -a
+	dh_shlibdeps -a -l${stdbuilddir}/lib
 	dh_shlibdeps -pe2fsprogs -l${stdbuilddir}/lib \
 		-u"-Ldebian/e2fsprogs.shlibs.local"
 ifeq ($(SKIP_UDEB),)
@@ -461,27 +451,22 @@ ifeq ($(SKIP_FUSE2FS),)
 		-u"-Ldebian/e2fsprogs.shlibs.local"
 endif
 
-	dh_gencontrol -Ncomerr-dev -Nss-dev -Ne2fsprogs-udeb
-	DH_OPTIONS= dh_gencontrol -pcomerr-dev \
+	dh_gencontrol -a -Ncomerr-dev -Nss-dev -Ne2fsprogs-udeb
+	dh_gencontrol -pcomerr-dev \
 	  -u '-v${COMERR_VERSION}-${MAIN_VERSION} -VmainBinary=${MAIN_VERSION}'
-	DH_OPTIONS= dh_gencontrol -pss-dev \
+	dh_gencontrol -pss-dev \
 	  -u '-v${SS_VERSION}-${MAIN_VERSION} -VmainBinary=${MAIN_VERSION}'
 ifeq ($(SKIP_UDEB),)
-	dh_gencontrol	-pe2fsprogs-udeb -- -fdebian/files~
+	dh_gencontrol -pe2fsprogs-udeb -- -fdebian/files~
 endif
 
 ifeq ($(SKIP_UDEB),)
 	dpkg-distaddfile $(UDEB_NAME) debian-installer $(UDEB_PRIORITY)
 endif
-	dh_md5sums
-	dh_builddeb
+	dh_md5sums -a
+	dh_builddeb -a
 
-# binary-arch builds a superset of binary-indep.  See the comment
-# before the binary-arch rule for more details.
-binary: binary-arch
-
-.PHONY: binary binary-arch binary-indep clean checkroot mrproper \
-	debug_flags debian-files
+binary: binary-indep binary-arch
 
 debug_flags:
 	@echo CFLAGS is $(CFLAGS)
