debian: remove -dbg packages from the control file
It looks like Debian's upload automation will reject a control file
that has packages that it doesn't recognize, even if they are not
built in the default build profile.  (e.g., the expectation is that
build profiles will *disable* packages, but not *add* new binary
packages not normally built.)

So move the offending lines into debian/control.legacy-dbg which is
tacked onto the debian/control file via "./debian/rules debian-files"
and then removed via "./debian/rules mrproper".  It's a hack, but it's
only needed when building backports for Debian Jessie.

Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/debian/rules
+++ b/debian/rules
@@ -182,8 +182,18 @@ INSTALL_UDEB = install-udeb
 endif
 
 debian-files:
+ifneq ($(USE_DBGSYM),yes)
+	if test ! -f debian/control.save; then \
+		mv debian/control debian/control.save ; \
+		cat debian/control.save debian/control.legacy-dbg \
+			>> debian/control ; \
+	fi
+endif
 
 mrproper: clean
+	if test -f debian/control.save; then \
+		mv debian/control.save debian/control ; \
+	fi
 
 ${CFGSTDSTAMP}:
 	dh_testdir
