.gitignore: add misc/e4crypt and misc/e4crypt.8
It was forgotten to add these to .gitignore when e4crypt was added.

Signed-off-by: Eric Biggers <ebiggers@google.com>
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/.gitignore
+++ b/.gitignore
@@ -171,6 +171,8 @@ misc/e2initrd_helper
 misc/e2label.8
 misc/e2undo
 misc/e2undo.8
+misc/e4crypt
+misc/e4crypt.8
 misc/e4defrag
 misc/e4defrag.8
 misc/ext4.5
