--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ MCONFIG
 asm_types.h
 config.log
 config.status
+cscope.*
 debugfs/extent_cmds.c
 debugfs/debug_cmds.c
 debugfs/debugfs
@@ -203,6 +204,7 @@ misc/uuidd
 misc/uuidd.8
 misc/uuidgen
 misc/uuidgen.1
+ncscope.*
 parse-types.log
 po/Makefile.in
 po/POTFILES
