--- a/tests/test_one.in
+++ b/tests/test_one.in
@@ -57,7 +57,7 @@ if [ -n "$SKIP_SLOW_TESTS" -a -f $test_dir/is_slow_test ]; then
     exit 0
 fi
 
-rm -f $test_name.ok $test_name.failed
+rm -f $test_name.ok $test_name.failed $test_name.log $test_name.slow
 #echo -e -n "$test_name: $test_description:\r"
 
 TMPFILE=$(mktemp ${TMPDIR:-/tmp}/e2fsprogs-tmp-$test_name.XXXXXX)
